--- a/ListasLineares/Ordenadas/lista_ordenada_encadeada.ipynb
+++ b/ListasLineares/Ordenadas/lista_ordenada_encadeada.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,40 +63,40 @@
     "    def insert(self, qtd, preco, descricao):\n",
     "        new_node = Node(qtd, preco, descricao)\n",
     "\n",
-    "        if self.is_empty() or preco <= self.head.preco:\n",
+    "        if self.is_empty() or descricao <= self.head.descricao:\n",
     "            new_node.next = self.head \n",
     "            self.head = new_node\n",
     "        else:\n",
     "            current = self.head\n",
-    "            while current.next is not None and current.next.preco < preco:\n",
+    "            while current.next is not None and current.next.descricao < descricao:\n",
     "                current = current.next\n",
     "            new_node.next = current.next\n",
     "            current.next = new_node\n",
     "\n",
     "    # Busca de elemento\n",
-    "    def search(self, preco):\n",
+    "    def search(self, descricao):\n",
     "        current = self.head\n",
-    "        while current is not None and current.preco <= preco:\n",
-    "            if current.preco == preco:\n",
+    "        while current is not None and current.descricao <= descricao:\n",
+    "            if current.descricao == descricao:\n",
     "                return current\n",
     "            current = current.next\n",
     "        return None\n",
     "    \n",
     "    # Remoção\n",
-    "    def remove(self, preco):\n",
+    "    def remove(self, descricao):\n",
     "        if self.is_empty():\n",
     "            return None\n",
     "    \n",
-    "        if self.head.preco == preco:\n",
+    "        if self.head.descricao == descricao:\n",
     "            removed_node = self.head\n",
     "            self.head = self.head.next\n",
     "            return removed_node\n",
     "        \n",
     "        current = self.head\n",
-    "        while current.next is not None and current.next.preco < preco:\n",
+    "        while current.next is not None and current.next.descricao < descricao:\n",
     "            current = current.next\n",
     "        \n",
-    "        if current.next is None or current.next.preco > preco:\n",
+    "        if current.next is None or current.next.descricao > descricao:\n",
     "            return None\n",
     "        \n",
     "        removed_node = current.next\n",
@@ -116,19 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Qtd: 1, Preço: 5.0, Descrição: aitem 3\n",
       "Qtd: 1, Preço: 10.0, Descrição: item 1\n",
       "Qtd: 1, Preço: 15.0, Descrição: item 2\n",
       "\n",
       "\n",
       "Nova exibição após a remoção\n",
-      "A lista ordenada está vazia!\n"
+      "Qtd: 1, Preço: 5.0, Descrição: aitem 3\n"
      ]
     }
    ],
@@ -137,14 +138,15 @@
     "\n",
     "ol.insert(1, 10.0, \"item 1\")\n",
     "ol.insert(1, 15.0, \"item 2\")\n",
+    "ol.insert(1, 5.0, \"aitem 3\")\n",
     "\n",
     "ol.display()\n",
     "\n",
     "# resultado = ol.search(15.0)\n",
     "# print(resultado.descricao)\n",
     "\n",
-    "ol.remove(15.0)\n",
-    "ol.remove(10.0)\n",
+    "ol.remove(\"item 2\")\n",
+    "ol.remove(\"item 1\")\n",
     "\n",
     "print(\"\\n\\nNova exibição após a remoção\")\n",
     "ol.display()\n",
@@ -176,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
